--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -1,4 +1,4 @@
-#root {
+#reactroot {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -34,7 +34,7 @@
 }
 
 .card {
-  padding: 2em;
+  /* padding: 2em; */
 }
 
 .read-the-docs {
